--- a/app.json
+++ b/app.json
@@ -16,14 +16,12 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.jeavitta.Notepad_project"
     },
     "web": {
       "favicon": "./assets/favicon.png"
